<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eyeballMazeBacking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoBoardTop"
        android:layout_width="449dp"
        android:layout_height="63dp"
        android:background="#648DE5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/levelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_level"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCurrentLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/levelName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goalsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="11dp"
            android:text="@string/goals_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewGoalsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goalsLeft" />

        <TextView
            android:id="@+id/movesMade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/moves_made"
            app:layout_constraintStart_toEndOf="@+id/textViewCurrentLevel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewMoveCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/movesMade"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mazeBoard"
        android:layout_width="339dp"
        android:layout_height="506dp"
        android:background="#DCDCDC"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBoardTop"
        app:layout_constraintVertical_bias="0.532">

        <ImageView
            android:id="@+id/imageGrid0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageGrid0"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageGrid1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageGrid2"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid0"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid1"
            app:layout_constraintStart_toEndOf="@+id/imageGrid4"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid2"
            app:layout_constraintStart_toEndOf="@+id/imageGrid5"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageGrid6"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid8"
            android:layout_width="70dp"
            android:layout_height="070dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid4"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid5"
            app:layout_constraintStart_toEndOf="@+id/imageGrid8"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid10"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid6"
            app:layout_constraintStart_toEndOf="@+id/imageGrid9"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid11"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageGrid10"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid12"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid8"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid13"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid9"
            app:layout_constraintStart_toEndOf="@+id/imageGrid12"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid14"
            android:layout_width="70dp"
            android:layout_height="070dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid10"
            app:layout_constraintStart_toEndOf="@+id/imageGrid13"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid15"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageGrid14"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid16"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid12"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid17"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid13"
            app:layout_constraintStart_toEndOf="@+id/imageGrid16"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid18"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid14"
            app:layout_constraintStart_toEndOf="@+id/imageGrid17"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid19"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageGrid18"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid20"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid21"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid17"
            app:layout_constraintStart_toEndOf="@+id/imageGrid20"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid22"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid18"
            app:layout_constraintStart_toEndOf="@+id/imageGrid21"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageGrid23"
            android:layout_width="70dp"
            android:layout_height="070dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="13dp"
            android:onClick="squareClick"
            app:layout_constraintBottom_toTopOf="@+id/imageGrid19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageGrid22"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="434dp"
        android:layout_height="76dp"
        android:background="#648DE5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:onClick="startGame"
            android:text="@string/button_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/button_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonStart"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/button_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonPause"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>